...
  horizontal?: boolean;
  showAvatar?: boolean;
}) {
  const user = item.author.handle || item.author.did;
  return (
    <AQLink
      testID="home-stream-card"
      to={{
        screen: "Stream",
        params: {
          user: user,
        },
      }}
...
                  flexDirection: "row",
                  alignItems: "center",
                  gap: spacing[2],
                }}
              >
                <LiveDot />
                <Text size="xl">Live now</Text>
              </View>
              <Text size="base" tabular style={{ color: theme.colors.text3 }}>
                {segments.length}{" "}
                {segments.length === 1 ? "streamer" : "streamers"}
              </Text>
            </View>
...
