...
        open={showTeleportModal}
        onOpenChange={setShowTeleportModal}
        onSubmit={handleTeleportSubmit}
      />
      {replyTo && (
        <View
          testID="chat-reply-preview"
          style={[
            layout.flex.row,
            layout.flex.alignCenter,
            layout.flex.spaceBetween,
            pl[2],
            pr[1],
...
              : [{ flex: 1 }]
          }
        >
          {leftSlot}
          <Textarea
            ref={textAreaRef}
            testID="chat-input"
            numberOfLines={1}
            value={message}
            enterKeyHint="send"
            onSubmitEditing={(e) => {
              e.preventDefault();
              submit();
...
